# data-catalog-search-api

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  github-actions-key  github-actions-key.pub  main.py  pyproject.toml  requirements.txt
.cursor/rules/: git_project_setup.mdc  project_initialization_script.mdc  project_structure_analysis.mdc  readme_update_workflow.mdc  user_instruction_compliance.mdc
.github/workflows/: ci.yml
api/tests/: test_main.py
faiss_index_e5_small/: index.pkl
faiss_indices/faiss_index_e5_small/: index.faiss  index.pkl
metadata/: enriched_metadata_clustered.json
tests/: test_main.py
