[project]
name = "data-catalog-search-api"
version = "0.1.0"
description = "FastAPI-based data catalog search service"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sentence-transformers",
    "langchain-community",
    "faiss-cpu",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "main.py",
    "metadata/",
]