[project]
name = "data-catalog-search-api"
version = "0.1.0"
description = "FastAPI-based data catalog search service"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "gunicorn",
    "sentence-transformers",
    "langchain-community",
    "faiss-cpu",
    "pydantic",
    "watchfiles",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
